--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <div id="footer">
     <div class="container">
-      <p class="footer-block">Place sticky footer content here.</p>
+      <p class="footer-block">Patient Management System</p>
     </div>
   </div>
