--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -45,7 +45,7 @@
         </div>
 
         <div class="col-xs-6">
-          <button class="btn btn-success" id="editBtn">Edit</button>
+          <button class="btn btn-success" id="editBtn"><i class="fa fa-pencil" aria-hidden="true"></i> Edit</button>
         </div>
 
     </div>
