--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,17 +13,20 @@
 <div class="container-fluid">
   <%- include('partials/navbar') %>
 
-  <h1 class="text-center">Weclome</h1>
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="text-center">Weclome</h1>
 
-  <div class="jumbotron text-center">
-    <h1><span class="fa fa-lock"></span>Authentication</h1>
+      <div class="jumbotron text-center">
+        <h1><span class="fa fa-lock"></span>Authentication</h1>
 
-    <p>Login or Register with:</p>
+        <p>Login or Register with:</p>
 
-    <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
-    <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
+        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
+        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
+      </div>
+    </div>
   </div>
-
 
 </div>
 
