--- a/views/css/editProfile.scss
+++ b/views/css/editProfile.scss
@@ -32,34 +32,6 @@ html {
   }
 }
 
-#userDetails{
-  list-style-type:none;
-  padding: 0px;
-  width: 50%
-}
-
-#editBtn{
-  margin: 0 auto;
-  display: block;
-}
-
-#patientsTotal{
-
-}
-
-#patientTag{
-  display: inline-block;
-}
-
-p{
-
-}
-
-#pNumber{
-  font-size: 26px;
-  font-weight: 800;
-}
-
-p{
-
+form {
+  margin-top: 20px;
 }
