--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -6,14 +6,12 @@
   <title>Smart Healthcare System</title>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="css/index.min.css">
+  <link rel="stylesheet" href="../css/editProfile.min.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
-
-<body>
 
 <%- include('partials/navbar') %>
 
@@ -23,52 +21,7 @@
 
 <div class="container-fluid">
 
-
-  <div class="page-header">
-        <h1>Dr. Quincy Promes</h1>
-
-  </div>
-
-    <div class="row">
-
-        <!-- LOCAL INFORMATION -->
-        <div class="col-xs-6">
-            <ul id="userDetails">
-              <li>
-                <i class="fa fa-building" aria-hidden="true"></i> <%= userData.work %>
-              </li>
-              <li>
-                <i class="fa fa-globe" aria-hidden="true"></i> <%= userData.city %>
-              </li>
-            </ul>
-
-
-        </div>
-
-        <div class="col-xs-6">
-          <a href="/profile/edit"><button class="btn btn-success" id="editBtn"><i class="fa fa-pencil" aria-hidden="true"></i> Edit</button></a>
-        </div>
-
-    </div>
-
-    <div class="row">
-
-        <!-- LOCAL INFORMATION -->
-        <div class="col-md-12">
-          <div class="container-fluid text-center" id="patientsTotal">
-            <i class="fa fa-location-arrow" aria-hidden="true"></i>
-            <p id="patientTag">
-              Patients
-            </p>
-            <p id="pNumber">
-              42
-            </p>
-          </div>
-        </div>
-
-    </div>
-
-    <a href="/logout" class="btn btn-default btn-sm">Logout</a>
+  <%- include('partials/bootstrapForm') %>
 
 </div>
 
