--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -55,15 +55,17 @@
 
         <!-- LOCAL INFORMATION -->
         <div class="col-md-12">
-          <div class="container-fluid text-center" id="patientsTotal">
-            <i class="fa fa-location-arrow" aria-hidden="true"></i>
-            <p id="patientTag">
-              Patients
-            </p>
-            <p id="pNumber">
-              42
-            </p>
-          </div>
+          <a href="/profile/patients" id="patientLink">
+            <div class="container-fluid text-center" id="patientsTotal">
+              <i class="fa fa-location-arrow" aria-hidden="true"></i>
+              <p id="patientTag">
+                Patients
+              </p>
+              <p id="pNumber">
+                42
+              </p>
+            </div>
+          </a>
         </div>
 
     </div>
