--- a/views/patients.ejs
+++ b/views/patients.ejs
@@ -6,7 +6,7 @@
   <title>Smart Healthcare System</title>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="../css/editProfile.min.css">
+  <link rel="stylesheet" href="../css/patients.min.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -17,7 +17,36 @@
 
 <div class="container-fluid">
 
-  
+  <h1 class="page-header" id="pHeader">Patients</h1>
+
+  <div class="row">
+
+    <div class="col-xs-12">
+
+      <!--<form action="/profile/patients/add" method="post">
+        <button name="foo" value="upvote">Upvote</button>
+      </form>-->
+
+      <div id="patientHolder">
+        <i class="fa fa-male fa-2x" aria-hidden="true"></i>
+        <h3 id="inline">John Deegan</h3>
+        <button class="btn btn-success" >View</button>
+      </div>
+
+      <% for(var i = 0; i < patientData.length; i++){%>
+
+      <% if(patientData[i].gender === "male") { %>
+        <i class="fa fa-male" aria-hidden="true"></i>
+      <% } else { %>
+        <i class="fa fa-female" aria-hidden="true"></i>
+      <% } %>
+
+      <% } %>
+
+
+    </div>
+
+  </div>
 
 </div>
 
