--- a/views/css/search.scss
+++ b/views/css/search.scss
@@ -36,15 +36,8 @@ html {
   margin-top: 25px;
 }
 
-#patientHolder {
-  margin-top: 20px;
-}
 
- #patientHolder h3 {
-  display: inline-block !important;
-  padding-left: 10px;
-}
 
-#patientHolder button {
-  margin-left: 10px;
+#inline {
+  display: inline-block;
 }
