--- a/views/css/onePatient.scss
+++ b/views/css/onePatient.scss
@@ -32,19 +32,9 @@ html {
   }
 }
 
-#pHeader {
-  margin-top: 25px;
-}
-
-#patientHolder {
+#patientList {
+  font-size: 16px;
+  list-style-type:none;
+  padding: 0px;
   margin-top: 20px;
-}
-
- #patientHolder h3 {
-  display: inline-block !important;
-  padding-left: 10px;
-}
-
-#patientHolder button {
-  margin-left: 10px;
 }
