--- a/views/appointments.ejs
+++ b/views/appointments.ejs
@@ -13,54 +13,16 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="../../../js/getapts.js"></script>
 </head>
 
 <%- include('partials/navbar') %>
-
-<div class="container-fluid" id="imageSection">
-  <% if(onePatientData.gender === "male") { %>
-      <i class="fa fa-align-center fa-male fa-5x" aria-hidden="true"></i>
-  <% } else { %>
-      <i class="fa fa-female fa-5x" aria-hidden="true"></i>
-  <% } %>
-</div>
 
 <div class="container-fluid">
 
   <div class="row">
 
     <div class="col-xs-12">
-
-      <h1 class="page-header"><%= onePatientData.name %></h1>
-
-      <button class="btn btn-success">Edit</button>
-      <button class="btn btn-success">Delete</button>
-
-      <ul id="patientList">
-        <li>
-          <b>Age:</b> <%= onePatientData.age %>
-        </li>
-        <li>
-          <b>Gender:</b> <%= onePatientData.gender %>
-        </li>
-        <li>
-          <b>Address:</b> <%= onePatientData.address %>
-        </li>
-        <li>
-          <b>Phone:</b> <%=onePatientData.phone %>
-        </li>
-      </ul>
-
-      <a href="/profile/patients/view/:id/appointments"><button class="btn btn-success">Appointments</button></a>
-    </div>
-
-
-    <div class="row">
-      <div class="col-xs-12">
-        <h3 class="page-header">Appointment History</h3>
-        <hr />
-      </div>
+      <h1>appointments</h1>
     </div>
 
   </div>
