--- a/views/patients.ejs
+++ b/views/patients.ejs
@@ -53,7 +53,7 @@
         <div id="patientHolder">
           <i class="fa fa-female fa-2x" aria-hidden="true"></i>
           <h3 id="inline"><%= patientData[i].name; %></h3>
-          <a href="./profile/patients/view/<%=patientData[i].id%>"><button class="btn btn-success" >View</button></a>
+          <a href="../profile/patients/view/<%=patientData[i].id%>"><button class="btn btn-success" >View</button></a>
         </div>
       <% } %>
 
