--- a/views/onePatient.ejs
+++ b/views/onePatient.ejs
@@ -60,6 +60,10 @@
       <div class="col-xs-12">
         <h3 class="page-header">Appointment History</h3>
         <hr />
+        <div id="appData">
+          
+        </div>
+        </p>
       </div>
     </div>
 
