--- a/views/css/editPatient.scss
+++ b/views/css/editPatient.scss
@@ -8,7 +8,6 @@ html {
   body {
     margin-bottom: $height-footer;
     font-family: 'Open Sans', sans-serif;
-    background-color: #c6c6c6;
   }
 
   #profiler{
@@ -33,30 +32,11 @@ html {
   }
 }
 
-#btnTextEdit #btnTextDelete {
-  color: #000;
-  font-weight: 600;
-}
-
-#pageDiv1{
-
-}
-
-#aptFuture{
-  display: none;
-}
-
-#aptHistory{
-  display: none;
-}
-
-#patientList {
-  font-size: 16px;
-  list-style-type:none;
-  padding: 0px;
+form {
   margin-top: 20px;
 }
 
-#aptHover:hover {
-  color: rgba(0, 0, 0, 0.5);
+#subBtn {
+  color: #000;
+  font-weight: 600;
 }
