--- a/views/onePatient.ejs
+++ b/views/onePatient.ejs
@@ -13,7 +13,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="../../../js/getapts.js"></script>
+  <script src="../../../js/onePatient.js"></script>
 </head>
 
 <%- include('partials/navbar') %>
@@ -76,6 +76,41 @@
       </div>
       </p>
     </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div id="divBtnOptions">
+        <h3 id="aptHover" class="page-header">Further Consultation</h3>
+      </div>
+
+    </div>
+    <div id="showForm">
+      <form id="selHospital">
+          <div class="form-group">
+              <label for="sel1">Hospital</label>
+              <select class="form-control" id="sel1">
+                <option>St.Vincents University Hospital</option>
+                <option>Beaumont Hospital</option>
+                <option>St. James's Hospital</option>
+                <option>St. Columcille's Hospital</option>
+              </select>
+          </div>
+          <div class="form-group">
+              <label for="sel1">Select Treatment:</label>
+              <select class="form-control" id="sel2">
+                <option>Emergency</option>
+                <option>CAT Scan</option>
+                <option>X-Ray</option>
+                <option>Further Consultancy</option>
+              </select>
+          </div>
+          <button class="btn btn-success">Submit</button>
+      </form>
+
+
+    </div>
+
   </div>
 
 </div>
