--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,12 +19,15 @@
       <h1 class="text-center">Weclome</h1>
 
       <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span>Authentication</h1>
+        <h1><span class="fa fa-lock"></span>Patient Management System</h1>
+
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Ps_GreekCross.svg" />
 
         <p>Login or Register with:</p>
 
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
+
+        <a href="/login"><button id="homeBtn" class="btn btn-success">Login</button></a>
+        <a href="/login"><button id="homeBtn" class="btn btn-success">Signup</button></a>
       </div>
     </div>
   </div>
