--- a/views/css/index.scss
+++ b/views/css/index.scss
@@ -10,14 +10,72 @@ html {
     font-family: 'Open Sans', sans-serif;
   }
 
-  #profiler{
-    width: 100%;
+  img {
     height: 150px;
   }
 
-  #imageSection{
-    padding: 0px;
+  @media  (min-width: 519px) and (max-width: 1300px) {
+    img {
+      height: 200px;
+    }
   }
+
+  @media  (min-width: 760px) and (max-width: 1300px) {
+    img {
+      height: 250px;
+    }
+  }
+
+  #homeBtn {
+    color: #000;
+  }
+
+  #homeBtn:hover {
+    color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(102, 187, 106, 0.9);
+  }
+
+  @media  (min-width: 380px) and (max-width: 519px) {
+    #homeBtn {
+      height: 50px;
+      width: 100px;
+      font-size: 18px;
+    }
+  }
+
+  @media  (min-width: 520px) and (max-width: 1300px) {
+    #homeBtn {
+      height: 75px;
+      width: 150px;
+      font-size: 24px;
+    }
+  }
+
+  //=============NAVBAR=========================================================
+
+  #navStyle {
+    background-color: #66bb6a;
+    color: #000;
+  }
+
+  #mainNavStyle{
+    color: #000;
+  }
+
+  #navLiStyle{
+    color: #000;
+  }
+
+  #navLiStyle:hover{
+    color: rgba(0, 0, 0, 0.5);
+  }
+
+  #toggleBtnStyle {
+    background-color: #000;
+  }
+
+  //=======FOOTER==============================================================
+
 
   #footer {
     bottom: 0;
@@ -30,46 +88,4 @@ html {
     }
 
   }
-}
-
-#userDetails{
-  list-style-type:none;
-  padding: 0px;
-  width: 50%
-}
-
-#editBtn{
-  margin: 0 auto;
-  display: block;
-}
-
-#patientsTotal{
-
-}
-
-#patientTag{
-  display: inline-block;
-}
-
-p{
-
-}
-
-#pNumber{
-  font-size: 26px;
-  font-weight: 800;
-}
-
-p{
-
-}
-
-#patientLink {
-  text-decoration: none; /* no underline */
-  color: #000;
-}
-
-#patientLink:hover {
-  text-decoration: none; /* no underline */
-  color: #5cb85c;
 }
