--- a/views/css/profile.scss
+++ b/views/css/profile.scss
@@ -39,11 +39,44 @@ html {
     list-style-type:none;
     padding: 0px;
     width: 50%
+    display: block;
+    margin: 0 auto;
   }
 
-  #editBtn{
-    margin: 0 auto;
+  #userDetails li{
+    font-size: 22px;
+  }
+
+  #logoutBtn {
+    margin-top: 20px;
+  }
+
+  #editBtn, #logoutBtn {
+    color: #000;
+    font-weight: 400;
     display: block;
+    margin: 0 auto;
+  }
+
+  #editBtn:hover, #logoutBtn:hover {
+    color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(102, 187, 106, 0.9);
+  }
+
+  @media  (min-width: 380px) and (max-width: 519px) {
+    #editBtn, #logoutBtn {
+      height: 50px;
+      width: 100px;
+      font-size: 18px;
+    }
+  }
+
+  @media  (min-width: 520px) and (max-width: 1600px) {
+    #editBtn, #logoutBtn {
+      height: 75px;
+      width: 150px;
+      font-size: 26px;
+    }
   }
 
   #patientTag{
@@ -66,8 +99,13 @@ html {
   }
 
   #profiler{
-    width: 100%;
-    height: 150px;
+    display: block;
+    margin: 0 auto;
+  max-width:230px;
+  height: 100px;
+  width: auto;
+  height: auto;
+  border: 1px solid;
   }
 
   #imageSection{
