--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,10 +24,8 @@
 
 <div class="container-fluid">
 
-
   <div class="page-header">
-        <h1><%= userData.name %></h1>
-
+        <h1 class="text-center"><%= userData.name %></h1>
   </div>
 
     <div class="row">
@@ -71,7 +69,7 @@
 
     </div>
 
-    <a href="/logout" class="btn btn-default btn-sm">Logout</a>
+    <a href="/logout"><button id="logoutBtn" class="btn btn-success">Logout</button></a>
 
 </div>
 
