--- a/views/css/profile.scss
+++ b/views/css/profile.scss
@@ -38,7 +38,7 @@ html {
   #userDetails{
     list-style-type:none;
     padding: 0px;
-    width: 50%
+    width: 50%;
     display: block;
     margin: 0 auto;
   }
@@ -56,19 +56,14 @@ html {
     font-weight: 400;
     display: block;
     margin: 0 auto;
+    height: 50px;
+    width: 100px;
+    font-size: 18px;
   }
 
   #editBtn:hover, #logoutBtn:hover {
     color: rgba(0, 0, 0, 0.9);
     background-color: rgba(102, 187, 106, 0.9);
-  }
-
-  @media  (min-width: 380px) and (max-width: 519px) {
-    #editBtn, #logoutBtn {
-      height: 50px;
-      width: 100px;
-      font-size: 18px;
-    }
   }
 
   @media  (min-width: 520px) and (max-width: 1600px) {
