--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -67,9 +67,11 @@
           </a>
         </div>
 
+        <a id="logoutLink" href="/logout"><button id="logoutBtn" class="btn btn-success">Logout</button></a>
+
     </div>
 
-    <a href="/logout"><button id="logoutBtn" class="btn btn-success">Logout</button></a>
+
 
 </div>
 
