--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -60,7 +60,7 @@
               <p id="pNumber">
 
               </p>
-              <i class="fa fa-location-arrow" aria-hidden="true"></i>
+              <!--<i class="fa fa-location-arrow" aria-hidden="true"></i>-->
               <p id="patientTag">
                 Patients
               </p>
