--- a/views/css/patients.scss
+++ b/views/css/patients.scss
@@ -10,13 +10,75 @@ html {
     font-family: 'Open Sans', sans-serif;
   }
 
-  #profiler{
-    width: 100%;
-    height: 150px;
+  //=============NAVBAR=========================================================
+
+  #navStyle {
+    background-color: #66bb6a;
+    color: #000;
   }
 
-  #imageSection{
-    padding: 0px;
+  #mainNavStyle{
+    color: #000;
+  }
+
+  #navLiStyle{
+    color: #000;
+  }
+
+  #navLiStyle:hover{
+    color: rgba(0, 0, 0, 0.5);
+  }
+
+  #toggleBtnStyle {
+    background-color: #000;
+  }
+
+  //=============================================
+
+  label {
+    font-size: 22px;
+    display: block;
+  }
+
+  form input {
+    height: 40px;
+    width: 200px;
+  }
+
+  #addPatientBtn{
+    margin-top: 20px;
+  }
+
+  #addPatientBtn {
+    color: #000;
+    height: 50px;
+    width: 150px;
+    font-size: 18px;
+  }
+
+  #addPatientBtn:hover {
+    color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(102, 187, 106, 0.9);
+  }
+
+  @media  (min-width: 520px) and (max-width: 1600px) {
+    #addPatientBtn {
+      height: 75px;
+      width: 150px;
+      font-size: 26px;
+    }
+  }
+
+  #formView {
+    text-align: center;
+  }
+
+  #formView form {
+    margin: auto;
+  }
+
+  #patientName {
+    font-size: 20px
   }
 
   #footer {
