--- a/views/css/patients.scss
+++ b/views/css/patients.scss
@@ -81,6 +81,12 @@ html {
     font-size: 26px
   }
 
+  #patientHolder {
+    display: block;
+    margin: 0 auto;
+    margin-top: 30px;
+  }
+
   #footer {
     bottom: 0;
     width: 100%;
