--- a/views/patients.ejs
+++ b/views/patients.ejs
@@ -43,24 +43,25 @@
         <a href="/profile/patients/addnew"><button id="addPatientBtn" class="btn btn-success">Add Patient</button></a>
       </div>
 
-      <% for(var i = 0; i < patientData.length; i++){%>
+      <div id="patientList">
+        <% for(var i = 0; i < patientData.length; i++){%>
 
-      <% if(patientData[i].gender === "male") { %>
-        <div id="patientHolder">
-          <i class="fa fa-male fa-2x" aria-hidden="true"></i>
-          <h3 id="patientName"><%= patientData[i].name; %></h3>
-          <a href="../profile/patients/view/<%=patientData[i].id%>"><button class="btn btn-success" >View</button></a>
-        </div>
-      <% } else { %>
-        <div id="patientHolder">
-          <i class="fa fa-female fa-2x" aria-hidden="true"></i>
-          <h3 id="patientName"><%= patientData[i].name; %></h3>
-          <a href="../profile/patients/view/<%=patientData[i].id%>"><button class="btn btn-success" >View</button></a>
-        </div>
-      <% } %>
+        <% if(patientData[i].gender === "male") { %>
+          <div id="patientHolder">
+            <i class="fa fa-male fa-2x" aria-hidden="true"></i>
+            <h3 id="patientName"><%= patientData[i].name; %></h3>
+            <a href="../profile/patients/view/<%=patientData[i].id%>"><button class="btn btn-success" >View</button></a>
+          </div>
+        <% } else { %>
+          <div id="patientHolder">
+            <i class="fa fa-female fa-2x" aria-hidden="true"></i>
+            <h3 id="patientName"><%= patientData[i].name; %></h3>
+            <a href="../profile/patients/view/<%=patientData[i].id%>"><button class="btn btn-success" >View</button></a>
+          </div>
+        <% } %>
 
-      <% } %>
-
+        <% } %>
+      </div>
 
     </div>
 
