--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
 
 
         <a href="/login"><button id="homeBtn" class="btn btn-success">Login</button></a>
-        <a href="/login"><button id="homeBtn" class="btn btn-success">Signup</button></a>
+        <a href="/signup"><button id="homeBtn" class="btn btn-success">Signup</button></a>
       </div>
     </div>
   </div>
