--- a/views/onePatient.ejs
+++ b/views/onePatient.ejs
@@ -105,7 +105,7 @@
                 <option>Further Consultancy</option>
               </select>
           </div>
-          <button class="btn btn-success">Submit</button>
+          <button id="btnText" class="btn btn-success">Submit</button>
       </form>
 
 
