--- a/views/css/editPatient.scss
+++ b/views/css/editPatient.scss
@@ -10,9 +10,39 @@ html {
     font-family: 'Open Sans', sans-serif;
   }
 
+  //=============NAVBAR=========================================================
+
+  #navStyle {
+    background-color: #66bb6a;
+    color: #000;
+  }
+
+  #mainNavStyle{
+    color: #000;
+  }
+
+  #navLiStyle{
+    color: #000;
+  }
+
+  #navLiStyle:hover{
+    color: rgba(0, 0, 0, 0.5);
+  }
+
+  #toggleBtnStyle {
+    background-color: #000;
+  }
+
+  //=============================================
+
   #profiler{
-    width: 100%;
-    height: 150px;
+    display: block;
+    margin: 0 auto;
+  max-width:230px;
+  height: 100px;
+  width: auto;
+  height: auto;
+  border: 1px solid;
   }
 
   #imageSection{
