--- a/views/css/onePatient.scss
+++ b/views/css/onePatient.scss
@@ -7,22 +7,58 @@ html {
 
   body {
     margin-bottom: $height-footer;
-    font-family: 'Open Sans', sans-serif;
-    background-color: #c6c6c6;
+    font-family: 'Open Sans', sans-serif
   }
+
+  //=============NAVBAR=========================================================
+
+  #navStyle {
+    background-color: #66bb6a;
+    color: #000;
+  }
+
+  #mainNavStyle{
+    color: #000;
+  }
+
+  #navLiStyle{
+    color: #000;
+  }
+
+  #navLiStyle:hover{
+    color: rgba(0, 0, 0, 0.5);
+  }
+
+  #toggleBtnStyle {
+    background-color: #000;
+  }
+
+  //=============================================
 
   #profiler{
     width: 100%;
     height: 150px;
   }
 
+  #report{
+    font-size: 22px;
+  }
+
   #imageSection{
     padding: 0px;
   }
 
-  #btnTextEdit #btnTextDelete {
+  #btnText, #btnTextEdit, #btnTextDelete {
     color: #000;
     font-weight: 600;
+  }
+
+  @media (min-width: 700px) and (max-width: 2000px){
+    #btnText, #btnTextEdit, #btnTextDelete {
+      height: 50px;
+      width: 100px;
+      margin-left: 20px;
+    }
   }
 
   #pageDiv1{
