--- a/views/css/patients.scss
+++ b/views/css/patients.scss
@@ -45,6 +45,19 @@ html {
     width: 200px;
   }
 
+  #viewBtn {
+    color: #000;
+    font-size: 18px;
+  }
+
+  @media (min-width: 700px) and (max-width: 2000px){
+    #viewBtn{
+      height: 50px;
+      width: 100px;
+    }
+
+  }
+
   #addPatientBtn{
     margin-top: 20px;
   }
@@ -65,7 +78,7 @@ html {
     #addPatientBtn {
       height: 75px;
       width: 150px;
-      font-size: 26px;
+      font-size: 22px;
     }
   }
 
@@ -87,9 +100,10 @@ html {
   }
 
   #patientHolder {
-    margin: 0;
-    margin-bottom: 20px;
+    display: block;
+    text-align: left;
   }
+
 
   #footer {
     bottom: 0;
