--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,10 +14,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a id="navLiStyle" href="#">Home</a></li>
-        <li><a id="navLiStyle" href="#">Profile</a></li>
-        <li><a id="navLiStyle" href="#">Login</a></li>
-        <li><a id="navLiStyle" href="#">Signup</a></li>
+        <li><a id="navLiStyle" href="/logout">Home</a></li>
+        <li><a id="navLiStyle" href="/profile">Profile</a></li>
+        <li><a id="navLiStyle" href="/login">Login</a></li>
+        <li><a id="navLiStyle" href="/signup">Signup</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
