--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,13 +6,15 @@
   <title>Smart Healthcare System</title>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="css/index.min.css">
+  <link rel="stylesheet" href="css/login.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
+<%- include('partials/navbar') %>
+
 <div class="container-fluid">
-  <%- include('partials/navbar') %>
+
 
   <div class="col-sm-6 col-sm-offset-3">
 
@@ -34,7 +36,7 @@
               <input type="password" class="form-control" name="password">
           </div>
 
-          <button type="submit" class="btn btn-warning btn-lg">Signup</button>
+          <button id="homeBtn" type="submit" class="btn btn-success">Signup</button>
       </form>
 
       <hr>
@@ -43,6 +45,8 @@
       <p>Or go <a href="/">home</a>.</p>
 
   </div>
+
+</div>
 
 <footer>
   <%- include('partials/footer') %>
